sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:7: error: type mismatch;
 found   : Int(1)
 required: Boolean
  while(1){
        ^